# ctg

./: .gitignore  .note.kak.9Ima8i  CMakeLists.txt  main.c  note  readme.txt
include/: call_method.h  ctg.h  curl_fn.h  curl_obj.h  debug_fn.h  fetchres.h  http_func.h  key_value.h  tg_method.h
src/: ctg.c  fetcher.c  http_func.c  key_value.c  req_curl.c  tg_method.c  utils.c
test/: assign.c  charconv.c  concat_int.c  create_arr.c  ctoch.c  delete_char_byoffset.c  getoptc.c  http_build_query.c  http_build_query_safe.c  key_value.c  malloctest.c  parse_command.c  pppppp.c  pthread_test1.c  rand_bytes.c  s_copy.c  splitbug.c  stack_smash.c  start_offset.c  strcar_app.c  strcat2.c  tes1.c  tes12.c  test_int64tostr.c  test_json_uint64.c  test_multithread.c  test_sprintf.c  tostring.c
